@@ -165,6 +165,9 @@ class Config(object):
         texinfo_appendices = ([], None),
         texinfo_elements = ({}, None),
         texinfo_domain_indices = (True, None),
+
+        # linkcheck options
+        linkcheck_ignore = ([], None),
     )
 
     def __init__(self, dirname, filename, overrides, tags):
