@@ -21,6 +21,8 @@ Release 1.1 (in development)
 * Added ``inline`` option to graphviz directives, and fixed the
   default (block-style) in LaTeX output.
 
+* #521: Added :confval:`linkcheck_ignore` config value.
+
 
 Release 1.0.4 (Sep 17, 2010)
 ============================
